--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -12,5 +12,8 @@
       <a class="navbar-brand fw-bold" href="index.html">SuperCar</a>
     </div>
   </nav>
-
-
+<main class="container py-5">
+    <h2 class="mb-4">Detalhes do Modelo</h2>
+    <div id="detalhesCarro" class="row justify-content-center">
+    </div>
+  </main>
