final do detalhes

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -17,3 +17,12 @@
     <div id="detalhesCarro" class="row justify-content-center">
     </div>
   </main>
+  <footer class="bg-dark text-white text-center py-3">
+    <small>&copy; 2025 SuperCar - Luan Deivid</small>
+  </footer>
+  <script src="app.js"></script>
+  <script>
+    carregarDetalhes();
+  </script>
+</body>
+</html>
