--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,14 @@
       <div class="carousel-item">
         <img src="carro.png" class="d-block w-100" style="height:500px; object-fit:cover;" alt="Urban SUV">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-          <h1>esportivos</h1>
+          <h1>Esportivos</h1>
           <p>Velocidade e Adrenalina</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="2025-mclaren-w1.png" class="d-block w-100" style="height:500px; object-fit:cover;" alt="EcoDrive">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-          <h1>EcoDrive</h1>
+          <h1>Corrida</h1>
           <p>Carros Rápidos</p>
         </div>
       </div>
